@startuml
class User {
  +String username
  +String email
  +String password
  +String role
  +Number fide_id
  +Number globalElo
  +Date registeredAt
}

class Player {
  +User user
  +Tournament tournament
  +Number score
  +Number entryRating
  +Number performanceRating
  +Boolean isPlaying
  +Date waitingSince
  +Number rank
  +List<Game> gameHistory
  +List<String> colorHistory
  +List<Player> recentOpponents
}

class Tournament {
  +String name
  +Date startDate
  +Date endDate
  +String tournLocation
  +String tournStatus
  +List<Player> participants
  +List<Game> games
  +List<ScoreboardEntry> scoreboard
}

class Game {
  +Player playerWhite
  +Player playerBlack
  +Boolean isFinished
  +Date finishedAt
  +String resultColor
}

class ScoreboardEntry {
  +Player player
  +Number score
}

User "1" -- "1..*" Player : participates as
Player "1" -- "1" Tournament : belongs to
Tournament "1" -- "*" Player : has participants
Tournament "1" -- "*" Game : hosts games
Game "1" --> "1" Player : White
Game "1" --> "1" Player : Black

@enduml
